<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_light"
    tools:context=".View.PhuHuynh.ActivityActivity">

    <!-- Top Toolbar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top_bar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/white"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nav_activity"
            android:textColor="@color/text_main"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/btn_notification"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_input_rounded"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/img_top_avatar"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:contentDescription="@string/desc_notification"
                android:src="@drawable/ic_notification"
                app:tint="@color/text_main" />
        </FrameLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_top_avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/desc_profile"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:shapeAppearanceOverlay="@style/CircleImage"
            app:strokeColor="@color/border_color"
            app:strokeWidth="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_activity_posts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="12dp"
        android:paddingBottom="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_top_bar"
        tools:listitem="@layout/item_activity_post" />

    <!-- Professional Floating Bottom Navigation -->
    <androidx.cardview.widget.CardView
        android:id="@+id/bottomNavContainer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="28dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:itemIconSize="24dp"
            app:itemIconTint="@color/nav_item_color"
            app:itemTextColor="@color/nav_item_color"
            app:labelVisibilityMode="labeled"
            app:itemTextAppearanceActive="@style/NavTextSmall"
            app:itemTextAppearanceInactive="@style/NavTextSmall"
            app:menu="@menu/bottom_nav_menu_ph" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>